modificacion package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tracoda-frontv2",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -13,8 +14,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.8",
+    "@angular/cli": "~8.3.6",
     "@angular/common": "~8.2.8",
     "@angular/compiler": "~8.2.8",
+    "@angular/compiler-cli": "~8.2.8",
     "@angular/core": "~8.2.8",
     "@angular/forms": "~8.2.8",
     "@angular/platform-browser": "~8.2.8",
