--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nguniversal/express-engine": "^8.2.6",
     "@nguniversal/module-map-ngfactory-loader": "v8.2.6",
     "express": "^4.17.1",
+    "ng2-pdf-viewer": "^6.3.0",
     "path": "^0.12.7",
     "primeicons": "^3.0.0-rc.1",
     "primeng": "^9.0.6",
